--- a/checkpoints/semiotic-analysis.Rmd
+++ b/checkpoints/semiotic-analysis.Rmd
@@ -81,8 +81,17 @@ prison_boundaries <-
 ```
 
 ```{r}
-#Fill data cleaning code here.
+# get rid of missing values
+scorecard <- scorecard %>% 
+  mutate(
+    across(where(is.character), ~na_if(., "PrivacySupressed"))
+    ) %>%
+  mutate(
+    across(where(is.character), ~na_if(., "NULL"))
+    ) %>%
+  discard(~all(is.na(.)))
 ```
+
 
 ## Units of Observation
 
@@ -91,6 +100,8 @@ Any time we count something in the world, we are not only engaging in a process 
 ### What makes each row in this dataset unique? 
 
 Identify the specific variables that uniquely identify each observation. Check to make sure that these values do not repeat in the dataset.
+
+UNITID, 
 
 ```{r}
 # Here I assume that the FACILITYID is a unique identifier for each prison in the dataset. To check, I group by the FACILITYID and filter to the groups with more than one observation. If I'm right, 0 rows should appear, indicating that FACILITYID is unique to each row.
@@ -102,6 +113,21 @@ prison_boundaries %>%
 
 ```{r}
 #Fill code confirm you've identified a unique ID for each row. Adjust your assumption if necessary, along with this code.
+unique(scorecard$UNITID) %>% length()
+
+scorecard %>%
+  group_by(UNITID) %>% 
+  filter(n() > 1)
+
+# OPEID, not unique but close
+scorecard2 <- scorecard %>%
+  group_by(OPEID) %>% 
+  filter(n() > 1)
+
+# urls-- not unique
+scorecard3 <- scorecard %>%
+  group_by(INSTURL) %>% 
+  filter(n() > 1)
 ```
 
 ### What does each row in your dataset represent? 
@@ -136,8 +162,7 @@ As you are considering this, you should:
 
 **Fill your response here.**
 
-The data documentation says, "A complete set of these data for all active Integrated Postsecondary Education Data System (IPEDS) institutions that participate in Title IV programs (either by disbursing aid or through deferments) and that are not solely administrative offices are available on the Scorecard data webpage and API1. In addition, some institutions that do not participate in Title IV programs are also included in the data if they meet similar criteria to Title IV participating institutions, ... [however] historical information for non-Title IV institutions (i.e., metrics from 1996- 97 through 2016-17) is not yet incorporated into the Scorecard data."
-
+The data documentation says, "A complete set of these data for all active Integrated Postsecondary Education Data System (IPEDS) institutions that participate in Title IV programs (either by disbursing aid or through deferments) and that are not solely administrative offices are available on the Scorecard data webpage and API1. In addition, some institutions that do not participate in Title IV programs are also included in the data if they meet similar criteria to Title IV participating institutions, ... [however] historical information for non-Title IV institutions (i.e., metrics from 1996-97 through 2016-17) is not yet incorporated into the Scorecard data."
 
 ## Categorical Variables
 
@@ -164,6 +189,42 @@ prison_boundaries %>%
 
 ```{r}
 #Fill code to plot bar charts here. 
+
+scorecard_und <- scorecard %>% 
+  mutate(
+         two_vs_four = case_when(
+           CCUGPROF >= 1 & CCUGPROF <= 4 ~ "two-year",
+           CCUGPROF >= 5 ~ "four-year",
+           CCUGPROF == 0 ~ "not classified",
+           CCUGPROF == -2 ~ "NA"
+         )
+         ) %>% 
+  select(two_vs_four) %>% 
+  filter(!is.na(two_vs_four))
+
+ggplot(data = scorecard, 
+       aes(x = as.factor(CCUGPROF),
+           fill = as.factor(CCUGPROF))
+       ) +
+  geom_bar() +
+  coord_flip()
+
+ggplot(data = scorecard_und, 
+       aes(x = two_vs_four,
+           fill = two_vs_four)
+       ) +
+  geom_bar() +
+  coord_flip()
+```
+
+```{r}
+# open admissions
+scorecard %>%
+  ggplot(aes(x = OPENADMP)) +
+  geom_bar() +
+  coord_flip() +
+  theme_minimal()
+
 ```
 
 What do you notice first?
